--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 <div class="col-lg-12 text-justify">
 
 
-    <p class="text-center w-responsive mx-auto mb-5">Please send all your inquiries to francoismathieu.teyssier [at] bbox.fr.</p>
+    <p class="text-center w-responsive mx-auto mb-5">Please send all your inquiries to francoismathieu.teyssier [at] gmail.com</p>
 
   </div>
     </div>
