--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ARAS Spectral Database</title>
+  <title>ARAS Spectral Database: Contact</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
 <div class="col-lg-12 text-justify">
 
 
-    <p class="text-center w-responsive mx-auto mb-5">Please send all your inquiries to francoismathieu.teyssier [at] gmail.com</p>
+    <p class="text-center w-responsive mx-auto mb-5">Please send all your inquiries to francoismathieu.teyssier [at] gmail.com.</p>
 
   </div>
     </div>
