--- a/conditions.html
+++ b/conditions.html
@@ -68,7 +68,19 @@
 
 </div>
 
-<div class="col-lg-12 text-justify">
+<div class="col-lg-12">
+  <p>This is an open database and in order that we can maintain this status, we expect those who make use of spectra from the database to abide by the following conditions:</p>
+  <ul>
+    <li>The ARAS Spectral Database must be acknowledged in all publications which make use of spectra from the database by reference to the following publication: <a href="https://ui.adsabs.harvard.edu/abs/2019CoSka..49..217T/abstract">https://ui.adsabs.harvard.edu/abs/2019CoSka..49..217T/abstract</a>.</li>
+    <li>Reference to the database should use the following link: <a href="http://www.astrosurf.com/aras/Aras_DataBase/DataBase.htm">http://www.astrosurf.com/aras/Aras_DataBase/DataBase.htm</a>.</li>
+    <li>The names of observers whose spectra are used in the analysis must be included in the Acknowledgements section of the publication.</li>
+    <li>If the publication includes, or is linked to, a table of observations, it is strongly encouraged that this should include the names of the observers.</li>
+    <li>It is the responsibility of the lead author to consider including observers as co-authors if they believe their observations have made a substantial contribution to the analysis.</li>
+    <li>Authors are strongly recommended to inform the ARAS Team via the following email address prior to any publication using spectra from the database
+to confirm the Acknowledgement is compliant with the conditions of use: francoismathieu.teyssier [@] gmail.com</li>
+</ul>
+<p>François Teyssier (FR), David Boyd (UK), Forrest Sims (US)<br>2020-12-28</p>
+
   </div>
     </div>
   </div>
