--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">ARAS Spectral Database</h1>
         <h4>About ARAS initiative</h4><br>
-		<img src="website_source/aras_plat3.png" width="150" height="200"><br><br>
+		<img src="website_source/aras_plat3.png" width="150" height="150"><br><br>
 </div>
 
 <div class="col-lg-12 text-justify">
@@ -82,7 +82,10 @@
     <p>The ARAS website developed by Christian Buil provides a huge amount of information about technics and observations: <a href="http://astrosurf.com/aras/">http://astrosurf.com/aras/</a>.</p>
     <p>Last but not least, the ARAS forum allows a strong link between observers in the field of spectroscopy, from technics to observing programs with more than 15000 posts since 2011: <a href="http://www.spectro-aras.com/forum/index.php">http://www.spectro-aras.com/forum/index.php</a>.<br>
       The forum is hosted by OVH with the financial support of Shelyak (<a href="https://www.shelyak.com/">https://www.shelyak.com/</a>).</p>
-    <h4>Eruptive Stars Section</h4><br>
+      <div class="col-lg-12 text-center">
+<h4>Eruptive Stars Section</h4>
+</div>
+
     <p>Spectroscopic monitoring of eruptive stars (e.g. symbiotic binaries, classical novae) by amateurs around the world, in both the northern and southern hemispheres, is a fundamental activity of the ARAS initiative. The group of volunteers demonstrates what can be accomplished with a network of independent, very small telescopes (from 20 to 60 cm), furnished with spectrographs of different resolutions, from 500 to 15000, and covering the range from 3600 to 9000 Å. The observing program concentrates on bright symbiotic stars (67, to date) and novae (41, to date). The main features of the ARAS activity are a rapid response to alerts, long-term monitoring, and high cadence. A part of the program involves collaborations based on requests from professional teams (e.g. CH Cyg, AG Dra, R Aqr, SU Lyn, T CrB) for long-term monitoring or specific events.</p>
     <p>The purpose of ARAS in fostering the participation of amateur astronomers in scientific projects in the field of spectroscopy is to implement and coordinate observing campaigns and monitoring. ARAS also responds to requests from astronomy research scientists, laboratories, or international consortiums. ARAS attempts to consolidate the acquired data into a web database and ensure that the quality of its data is compatible with scientific processing methods.</p>
 
