--- a/symbiotics.html
+++ b/symbiotics.html
@@ -86,7 +86,7 @@
         <h5 class="card-title">Stars of special interest</h5>
 <p class="card-text">Current campaigns: AG Dra, CH Cyg, SU Lyn, R Aqr, RS Oph, T CrB</p>
 <p class="card-text">Current surveys: CI Cyg, AG Peg, BF Cyg, AX Per</p>
-<p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CM Aql, V1413 Aql</p>
+<p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CM Aql, V1413 Aql, CN Cha (Symbiotic Nova)</p>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
