--- a/symbiotics.html
+++ b/symbiotics.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 69
 </p><p class="card-text">Number of spectra: 5831
-</p><p class="card-text">Last update: 2021-03-18, 07:25</p>
+</p><p class="card-text">Last update: 2021-03-18, 07:33</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -86,7 +86,7 @@
         <h5 class="card-title">Stars of special interest</h5>
 <p class="card-text">Current campaigns: AG Dra, CH Cyg, SU Lyn, R Aqr, RS Oph, T CrB</p>
 <p class="card-text">Current surveys: CI Cyg, AG Peg, BF Cyg, AX Per</p>
-<p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CM Aql, V1413 Aql, CN Cha (Symbiotic Nova)</p>
+<p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CM Aql, V1413 Aql</p>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
