--- a/cncha.html
+++ b/cncha.html
@@ -90,7 +90,7 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-danger mb-3">
 <div class="card-body">
 <h5 class="card-title">Symbiotic nova outburst</h5></div>
 </div>
