--- a/symbiotics.html
+++ b/symbiotics.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 69
 </p><p class="card-text">Number of spectra: 5859
-</p><p class="card-text">Last update: 2021-03-28, 20:43</p>
+</p><p class="card-text">Last update: 2021-03-29, 16:01</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -956,7 +956,21 @@
       <td>2</td>
     </tr>
   </tbody>
-</table><!-- <h3>Symbiotic candidates</h3> -->
+</table><br><br>
+<h4 style="text-align:left">Special projects</h4>
+<div>
+  <p style="text-align:left">
+    Classification of symbiotic candidates from the New Online Database of Symbiotic Variables on the request of Jaroslav Merc. <a href="symbiotics-merc.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+</svg></a>
+  </p>
+
+  <p style="text-align:left">
+    Classification of suspected symbiotic stars on the request of Adrian Lucy and Jenifer Sokoloski. <a href="symbiotics-lucy.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+</svg></a>
+  </p>
+</div>
       </div>
     </div>
   </div>
