--- a/novae.html
+++ b/novae.html
@@ -70,8 +70,8 @@
  <p class="card-text"></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 54
-</p><p class="card-text">Number of spectra: 2730
-</p><p class="card-text">Last update: 2021-06-03, 13:45</p>
+</p><p class="card-text">Number of spectra: 2728
+</p><p class="card-text">Last update: 2021-06-03, 13:53</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -396,8 +396,8 @@
       <td>+43 54 23.2</td>
       <td>V1112 Per</td>
       <td>ASASSN-17gk</td>
-      <td>285</td>
-      <td>1970-01-01</td>
+      <td>283</td>
+      <td>2020-11-26</td>
       <td>2021-05-01</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-05-01 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
@@ -736,11 +736,7 @@
 $(document).ready( function () {
     $('#table_id').DataTable({
     paging: false,
-    "order": [[1,'asc']],
-	"columnDefs": [    { "type": "num", "targets": 6 },{
-     "targets": [ 6 ],
-     "orderable": true
-  }  ]
+    "order": [[1,'asc']]
 });
 } );
 </script>
