--- a/symbiotics.html
+++ b/symbiotics.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 69
 </p><p class="card-text">Number of spectra: 6084
-</p><p class="card-text">Last update: 2021-06-03, 13:45</p>
+</p><p class="card-text">Last update: 2021-06-03, 13:53</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -996,11 +996,7 @@
 $(document).ready( function () {
     $('#table_id').DataTable({
     paging: false,
-    "order": [[1,'asc']],
-	"columnDefs": [    { "type": "num", "targets": 6 },{
-     "targets": [ 6 ],
-     "orderable": true
-  }  ]
+    "order": [[1,'asc']]
 });
 } );
 </script>
